# yatirimbot

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  README.md  app.py  confirmation_script.sh  devbox.json  env.example  main.py  pyproject.toml  requirements.txt
.githooks/: pre-cmmit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  dev_todo.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_pr_template.md  docs_pr_template.md  feature_pr_template.md
scripts/: pre-commit
src/: email_utils.py
src/bist/: __init__.py  bist_30_change.py  bist_comp.py  bist_open_close.py  bist_sector_info.py  bist_sector_stock_info.py  bist_stock_by_time.py  halka_arz.py
src/commodity/: __init__.py  commodity_price.py  gold_price.py  silver_price.py
src/crypto/: __init__.py  crypto_utils.py
src/etc/: __init__.py  exchange-rates.py  exchange_rates.py  long_term_performance.py
src/lib/: constants.py  utils.py
src/us/: __init__.py  us_open_close.py
templates/: index.html
